code/config/y.output
Terminals unused in grammar

   FOR
   SWITCH
   CASE
   COLON
   DEFAULT
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: %empty
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt
   25     | CONTINUE SEMI
   26     | BREAK SEMI

   27 DefList: %empty
   28        | Def DefList
   29        | error SEMI

   30 Def: Specifier DecList SEMI

   31 DecList: Dec
   32        | Dec COMMA DecList

   33 Dec: VarDec
   34    | VarDec ASSIGNOP Exp

   35 Exp: Exp ASSIGNOP Exp
   36    | Exp AND Exp
   37    | Exp OR Exp
   38    | Exp RELOP Exp
   39    | Exp PLUS Exp
   40    | Exp MINUS Exp
   41    | Exp STAR Exp
   42    | Exp MOD Exp
   43    | Exp DIV Exp
   44    | LP Exp RP
   45    | MINUS Exp
   46    | NOT Exp
   47    | DPLUS Exp
   48    | Exp DPLUS
   49    | ID LP Args RP
   50    | ID LP RP
   51    | ID
   52    | INT
   53    | FLOAT

   54 Args: Exp COMMA Args
   55     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 29
INT <type_int> (258) 52
ID <type_id> (259) 10 11 12 49 50 51
RELOP <type_id> (260) 38
TYPE <type_id> (261) 7
FLOAT <type_float> (262) 53
DPLUS (263) 47 48
LP (264) 11 12 22 23 24 44 49 50
RP (265) 11 12 22 23 24 44 49 50
LC (266) 16
RC (267) 16
SEMI (268) 4 6 19 21 25 26 29 30
COMMA (269) 9 14 32 54
PLUS (270) 39
MINUS (271) 40 45
STAR (272) 41
DIV (273) 43
MOD (274) 42
ASSIGNOP (275) 34 35
AND (276) 36
OR (277) 37
NOT (278) 46
IF (279) 22 23
ELSE (280) 23
WHILE (281) 24
RETURN (282) 21
FOR (283)
SWITCH (284)
CASE (285)
COLON (286)
DEFAULT (287)
CONTINUE (288) 25
BREAK (289) 26
EXT_DEF_LIST (290)
EXT_VAR_DEF (291)
FUNC_DEF (292)
FUNC_DEC (293)
EXT_DEC_LIST (294)
PARAM_LIST (295)
PARAM_DEC (296)
VAR_DEF (297)
DEC_LIST (298)
DEF_LIST (299)
COMP_STM (300)
STM_LIST (301)
EXP_STMT (302)
IF_THEN (303)
IF_THEN_ELSE (304)
FUNC_CALL (305)
ARGS (306)
FUNCTION (307)
PARAM (308)
ARG (309)
CALL (310)
LABEL (311)
GOTO (312)
JLT (313)
JLE (314)
JGT (315)
JGE (316)
EQ (317)
NEQ (318)
UMINUS (319)
LOWER_THEN_ELSE (320)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
program <ptr> (67)
    on left: 1, on right: 0
ExtDefList <ptr> (68)
    on left: 2 3, on right: 1 3
ExtDef <ptr> (69)
    on left: 4 5 6, on right: 3
Specifier <ptr> (70)
    on left: 7, on right: 4 5 15 30
ExtDecList <ptr> (71)
    on left: 8 9, on right: 4 9
VarDec <ptr> (72)
    on left: 10, on right: 8 9 15 33 34
FuncDec <ptr> (73)
    on left: 11 12, on right: 5
VarList <ptr> (74)
    on left: 13 14, on right: 11 14
ParamDec <ptr> (75)
    on left: 15, on right: 13 14
CompSt <ptr> (76)
    on left: 16, on right: 5 20
StmList <ptr> (77)
    on left: 17 18, on right: 16 18
Stmt <ptr> (78)
    on left: 19 20 21 22 23 24 25 26, on right: 18 22 23 24
DefList <ptr> (79)
    on left: 27 28 29, on right: 16 28
Def <ptr> (80)
    on left: 30, on right: 28
DecList <ptr> (81)
    on left: 31 32, on right: 30 32
Dec <ptr> (82)
    on left: 33 34, on right: 31 32
Exp <ptr> (83)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53, on right: 19 21 22 23 24 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 54 55
Args <ptr> (84)
    on left: 54 55, on right: 49 54


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


State 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


State 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


State 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


State 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


State 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


State 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


State 17

   16 CompSt: LC . DefList StmList RC

    error  shift, and go to state 25
    TYPE   shift, and go to state 2

    INT       reduce using rule 27 (DefList)
    ID        reduce using rule 27 (DefList)
    FLOAT     reduce using rule 27 (DefList)
    DPLUS     reduce using rule 27 (DefList)
    LP        reduce using rule 27 (DefList)
    LC        reduce using rule 27 (DefList)
    RC        reduce using rule 27 (DefList)
    MINUS     reduce using rule 27 (DefList)
    NOT       reduce using rule 27 (DefList)
    IF        reduce using rule 27 (DefList)
    WHILE     reduce using rule 27 (DefList)
    RETURN    reduce using rule 27 (DefList)
    CONTINUE  reduce using rule 27 (DefList)
    BREAK     reduce using rule 27 (DefList)

    Specifier  go to state 26
    DefList    go to state 27
    Def        go to state 28


State 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


State 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 29


State 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 30


State 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 31

    $default  reduce using rule 13 (VarList)


State 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


State 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 25

   29 DefList: error . SEMI

    SEMI  shift, and go to state 32


State 26

   30 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 33
    DecList  go to state 34
    Dec      go to state 35


State 27

   16 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 36
    ID        shift, and go to state 37
    FLOAT     shift, and go to state 38
    DPLUS     shift, and go to state 39
    LP        shift, and go to state 40
    LC        shift, and go to state 17
    MINUS     shift, and go to state 41
    NOT       shift, and go to state 42
    IF        shift, and go to state 43
    WHILE     shift, and go to state 44
    RETURN    shift, and go to state 45
    CONTINUE  shift, and go to state 46
    BREAK     shift, and go to state 47

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 48
    StmList  go to state 49
    Stmt     go to state 50
    Exp      go to state 51


State 28

   28 DefList: Def . DefList

    error  shift, and go to state 25
    TYPE   shift, and go to state 2

    INT       reduce using rule 27 (DefList)
    ID        reduce using rule 27 (DefList)
    FLOAT     reduce using rule 27 (DefList)
    DPLUS     reduce using rule 27 (DefList)
    LP        reduce using rule 27 (DefList)
    LC        reduce using rule 27 (DefList)
    RC        reduce using rule 27 (DefList)
    MINUS     reduce using rule 27 (DefList)
    NOT       reduce using rule 27 (DefList)
    IF        reduce using rule 27 (DefList)
    WHILE     reduce using rule 27 (DefList)
    RETURN    reduce using rule 27 (DefList)
    CONTINUE  reduce using rule 27 (DefList)
    BREAK     reduce using rule 27 (DefList)

    Specifier  go to state 26
    DefList    go to state 52
    Def        go to state 28


State 29

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


State 30

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


State 31

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 53
    ParamDec   go to state 22


State 32

   29 DefList: error SEMI .

    $default  reduce using rule 29 (DefList)


State 33

   33 Dec: VarDec .
   34    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 54

    $default  reduce using rule 33 (Dec)


State 34

   30 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 55


State 35

   31 DecList: Dec .
   32        | Dec . COMMA DecList

    COMMA  shift, and go to state 56

    $default  reduce using rule 31 (DecList)


State 36

   52 Exp: INT .

    $default  reduce using rule 52 (Exp)


State 37

   49 Exp: ID . LP Args RP
   50    | ID . LP RP
   51    | ID .

    LP  shift, and go to state 57

    $default  reduce using rule 51 (Exp)


State 38

   53 Exp: FLOAT .

    $default  reduce using rule 53 (Exp)


State 39

   47 Exp: DPLUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 58


State 40

   44 Exp: LP . Exp RP

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 59


State 41

   45 Exp: MINUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 60


State 42

   46 Exp: NOT . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 61


State 43

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 62


State 44

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 63


State 45

   21 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 64


State 46

   25 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 65


State 47

   26 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 66


State 48

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


State 49

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 67


State 50

   18 StmList: Stmt . StmList

    INT       shift, and go to state 36
    ID        shift, and go to state 37
    FLOAT     shift, and go to state 38
    DPLUS     shift, and go to state 39
    LP        shift, and go to state 40
    LC        shift, and go to state 17
    MINUS     shift, and go to state 41
    NOT       shift, and go to state 42
    IF        shift, and go to state 43
    WHILE     shift, and go to state 44
    RETURN    shift, and go to state 45
    CONTINUE  shift, and go to state 46
    BREAK     shift, and go to state 47

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 48
    StmList  go to state 68
    Stmt     go to state 50
    Exp      go to state 51


State 51

   19 Stmt: Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   48    | Exp . DPLUS

    RELOP     shift, and go to state 69
    DPLUS     shift, and go to state 70
    SEMI      shift, and go to state 71
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    MOD       shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79


State 52

   28 DefList: Def DefList .

    $default  reduce using rule 28 (DefList)


State 53

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


State 54

   34 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 80


State 55

   30 Def: Specifier DecList SEMI .

    $default  reduce using rule 30 (Def)


State 56

   32 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 33
    DecList  go to state 81
    Dec      go to state 35


State 57

   49 Exp: ID LP . Args RP
   50    | ID LP . RP

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    RP     shift, and go to state 82
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp   go to state 83
    Args  go to state 84


State 58

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   47    | DPLUS Exp .
   48    | Exp . DPLUS

    DPLUS  shift, and go to state 70

    $default  reduce using rule 47 (Exp)


State 59

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   44    | LP Exp . RP
   48    | Exp . DPLUS

    RELOP     shift, and go to state 69
    DPLUS     shift, and go to state 70
    RP        shift, and go to state 85
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    MOD       shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79


State 60

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   45    | MINUS Exp .
   48    | Exp . DPLUS

    DPLUS  shift, and go to state 70

    $default  reduce using rule 45 (Exp)


State 61

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   46    | NOT Exp .
   48    | Exp . DPLUS

    DPLUS  shift, and go to state 70

    $default  reduce using rule 46 (Exp)


State 62

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 86


State 63

   24 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 87


State 64

   21 Stmt: RETURN Exp . SEMI
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   48    | Exp . DPLUS

    RELOP     shift, and go to state 69
    DPLUS     shift, and go to state 70
    SEMI      shift, and go to state 88
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    MOD       shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79


State 65

   25 Stmt: CONTINUE SEMI .

    $default  reduce using rule 25 (Stmt)


State 66

   26 Stmt: BREAK SEMI .

    $default  reduce using rule 26 (Stmt)


State 67

   16 CompSt: LC DefList StmList RC .

    $default  reduce using rule 16 (CompSt)


State 68

   18 StmList: Stmt StmList .

    $default  reduce using rule 18 (StmList)


State 69

   38 Exp: Exp RELOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 89


State 70

   48 Exp: Exp DPLUS .

    $default  reduce using rule 48 (Exp)


State 71

   19 Stmt: Exp SEMI .

    $default  reduce using rule 19 (Stmt)


State 72

   39 Exp: Exp PLUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 90


State 73

   40 Exp: Exp MINUS . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 91


State 74

   41 Exp: Exp STAR . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 92


State 75

   43 Exp: Exp DIV . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 93


State 76

   42 Exp: Exp MOD . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 94


State 77

   35 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 95


State 78

   36 Exp: Exp AND . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 96


State 79

   37 Exp: Exp OR . Exp

    INT    shift, and go to state 36
    ID     shift, and go to state 37
    FLOAT  shift, and go to state 38
    DPLUS  shift, and go to state 39
    LP     shift, and go to state 40
    MINUS  shift, and go to state 41
    NOT    shift, and go to state 42

    Exp  go to state 97


State 80

   34 Dec: VarDec ASSIGNOP Exp .
   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   48    | Exp . DPLUS

    RELOP     shift, and go to state 69
    DPLUS     shift, and go to state 70
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    MOD       shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79

    $default  reduce using rule 34 (Dec)


State 81

   32 DecList: Dec COMMA DecList .

    $default  reduce using rule 32 (DecList)


State 82

   50 Exp: ID LP RP .

    $default  reduce using rule 50 (Exp)


State 83

   35 Exp: Exp . ASSIGNOP Exp
   36    | Exp . AND Exp
   37    | Exp . OR Exp
   38    | Exp . RELOP Exp
   39    | Exp . PLUS Exp
   40    | Exp . MINUS Exp
   41    | Exp . STAR Exp
   42    | Exp . MOD Exp
   43    | Exp . DIV Exp
   48    | Exp . DPLUS
   54 Args: Exp . COMMA Args
   55     | Exp .

    RELOP     shift, and go to state 69
    DPLUS     shift, and go to state 70
    COMMA     shift, and go to state 98
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    MOD       shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79

    $default  reduce using rule 55 (Args)


State 84

   49 Exp: ID LP Args . RP
